# sdsl-lite

./: .travis.yml  install.sh
examples/: CMakeLists.txt  int-vector-rank.cpp
include/sdsl/: coder_fibonacci.hpp  csa_wt.hpp  divsufsort.hpp  divsufsort64.hpp  divsufsort_config.hpp  divsufsort_impl.hpp  int_vector.hpp  int_vector_il.hpp  memory_management.hpp  rank_support.hpp  rank_support_int.hpp  rank_support_int_scan.hpp  rank_support_int_v.hpp  rank_support_v.hpp  rank_support_v5.hpp  rank_support_v_int.hpp  select_support_mcl.hpp  structure_tree.hpp  suffix_array_algorithm.hpp  suffix_array_helper.hpp  suffix_arrays.hpp  util.hpp  wt_epr.hpp
test/: CMakeLists.txt  bit_vector_test.cpp  bit_vector_test.typedef  csa_byte_test.1.typedef  csa_byte_test.cpp  csa_byte_test.typedef  csa_int_test.cpp  csa_int_test.typedef  cst_byte_test.cpp  cst_byte_test.typedef  cst_int_test.cpp  cst_int_test.typedef  download_files.cmake  int_vector_test.cpp  rank_support_test.cpp  rank_support_test.typedef  select_support_test.cpp  select_support_test.typedef  wt_byte_test.cpp  wt_byte_test.typedef  wt_int_test.cpp  wt_int_test.typedef
